# shop_compare

./: .gitignore  AGENTS.md  DEVELOPMENT.md  Makefile  README.md  pyproject.toml  requirements.txt  search_engine.py
fetchers/: fetcher.py
fetchers/ocado/: fetcher.py  models.py  sample.json
fetchers/sainsburry/: fetcher.py  models.py  sample.json
tests/: conftest.py  test_search_engine.py
