[project]
name = "shop-compare"
version = "0.1.0"
description = "Scripts to compare prices across supermarket chains in the UK."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "annotated-types==0.7.0",
  "certifi==2025.1.31",
  "charset-normalizer==3.4.1",
  "cloudpickle==3.0.0",
  "fire==0.7.0",
  "gym==0.26.2",
  "gym-notices==0.0.8",
  "gym-super-mario-bros==7.4.0",
  "idna==3.10",
  "nes-py==8.2.1",
  "numpy==2.0.0",
  "pydantic==2.10.6",
  "pydantic-core==2.27.2",
  "pyglet==1.5.21",
  "requests==2.32.3",
  "termcolor==2.5.0",
  "tqdm==4.66.4",
  "typing-extensions==4.12.2",
  "urllib3==2.3.0",
]

[dependency-groups]
dev = [
  "pre-commit==3.7.1",
  "pytest==8.3.4",
  "pytest-testmon==2.1.1",
  "pytest-xdist==3.6.1",
  "ruff==0.9.3",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --color=yes"
